# XmLLM

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-hf.yml
frontend/static/: index.html
src/app/: main.py  settings.py
src/app/api/: __init__.py  routes_exports.py  routes_health.py  routes_jobs.py  routes_ocr.py  routes_providers.py  routes_viewer.py
src/app/enrichers/: __init__.py  bbox_repair_light.py  hyphenation_basic.py  lang_propagation.py  polygon_to_bbox.py  (+2 more)
tests/: conftest.py
tests/fixtures/: double_column.json  hyphenation_sample.json  line_box_sample.json  noisy_page.json  paddle_ocr_sample.json  text_only_blocks.json  text_only_sample.json  title_body.json
tests/integration/: test_api.py  test_dual_export.py  test_fixtures_e2e.py  test_job_service.py  test_paddle_to_alto.py
tests/unit/: test_adapter_word_box.py  test_alto_serializer.py  test_canonical_builder.py  test_canonical_document.py  test_database.py  test_document_policy.py  test_enrichers.py  test_export_eligibility.py  test_file_store.py  test_geo_baseline.py  test_geo_bbox.py  test_geo_normalization.py  test_geo_polygon.py  test_geo_quantization.py  test_geo_transforms.py  test_geometry.py  test_health.py  test_job_events.py  test_page_xml_serializer.py  test_provenance.py  test_provider_system.py  test_raw_payload.py  test_readiness.py  test_readiness_validator.py  test_schema_validator.py  test_settings.py  test_structural_validator.py  test_viewer_builder.py  test_viewer_projection.py
(+47 files in other folders)
